# mcp-jira-confluence

./: .editorconfig  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  QUICKSTART.md  README.md  pyproject.toml
_specs/: MCP-CONFLUENCE-LABELS.md  jira-update-issue-spec.md
docs/: API_CHANGES.md  IMPLEMENTATION_SUMMARY.md  JIRA_SERVER_SUPPORT_SPEC.md  MCP_INTEGRATION.md  MCP_SERVER_FIX_SPECIFICATION.md  PROJECT_STANDARDS.md  SPECIFICATION.md  SUCCESS_REPORT.md  TESTING.md
jira_confluence_mcp/: __init__.py  __main__.py  client.py  errors.py  formatters.py  models.py  server.py
tasks/: create-issue-extra-fields.md
tests/: test_connection.py  test_mcp_server.py  test_mcp_tools.py  test_my_tasks.py  test_raw_response.py  test_token_fix.py  test_with_inspector.sh
